--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #ffffff;
+  background-color: #000000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: rgba(37, 0, 245, 0.721);
+  color: rgba(248, 248, 248, 0.721);
 }
 
 .App-link {
